[gd_scene load_steps=2 format=3 uid="uid://dewre2bar1n7o"]

[ext_resource type="Script" uid="uid://by40h3i0bsesj" path="res://scripts/dev/save_edit.gd" id="1_f18h7"]

[node name="Saveeditor" type="Window"]
oversampling_override = 1.0
position = Vector2i(0, 76)
size = Vector2i(520, 550)
visible = false
always_on_top = true
script = ExtResource("1_f18h7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DragHeader" type="Panel" parent="VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RawEditor" type="CodeEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 485.455)
layout_mode = 2
symbol_lookup_on_click = true
symbol_tooltip_on_hover = true
gutters_draw_breakpoints_gutter = true
gutters_draw_bookmarks = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
indent_use_spaces = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SaveButton"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "CloseButton"
